# deep-localizer

./: .gitignore  404.html  Makefile  README.md  REPORT.md  deeplocalizer.py  download_face_localizer_data.py  example.py  face_data_viewer.ipynb  face_localizer_dataset.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt  resnet34_example.ipynb  resnet_example.ipynb  resnet_face_act.ipynb  resnet_face_example.ipynb  sitemap.xml  test_pool.ipynb  test_safetensor.ipynb
.github/workflows/: docs.yml
deeplocalizer/: __init__.py  deeplocalizer.py
docs/: index.md
experiments/: face_localizer_perf.ipynb  resnet_ablate.ipynb  sample_1k.ipynb
face_data/: README.md  task_face_localizer.parquet
search/: search_index.json
