[project]
name = "deeplocalizer"
version = "0.0.2"
description = "Package to localize torch deep learning models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy<2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "safetensors>=0.5.3",
    "seaborn>=0.13.2",
    "torch==2.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "asyncio>=3.4.3",
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "transformers>=4.49.0",
]

[tool.setuptools]
packages = ["deeplocalizer"]
license-files = []
